@@ -106,7 +106,8 @@ admin.title.virtualwiki=Dodaj wirtualne Wiki
 admin.usergrouptype.database=baza danych
 admin.usergrouptype.ldap=LDAP
 allcategories.title=Kategorie
-allimages.title=All Files
+allfiles.title=All Files
+allimages.title=All Images
 alltopics.title=Wszystkie artyku\u0142y
 common.add=Dodaj
 common.back=Powr\u00F3t
