@@ -86,6 +86,9 @@
 	<c:when test="${pageInfo.actionError}">
 		<jsp:include page="error-display.jsp" flush="true" />
 	</c:when>
+	<c:when test="${pageInfo.actionFiles}">
+		<jsp:include page="files.jsp" flush="true" />
+	</c:when>
 	<c:when test="${pageInfo.actionHistory}">
 		<jsp:include page="history.jsp" flush="true" />
 	</c:when>
